Fix: navbar z-index

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,6 +44,9 @@ a:hover {
 .contents {
   margin-top: 20px;
 }
+.navbar {
+  z-index: 0 !important;
+}
 .navbar-light > a:hover {
   background: #f5f5f5 !important;
 }
